# spintexture

./: README.md  pyproject.toml  setup.cfg
examples/MoSSe/: POSCAR
spintexture/: __init__.py  cli.py  kmesh.py  spin2d.py  spin3d.py  utils.py
