[metadata]
name = spintexture
version = 0.1.0
author = Souvick Chakraborty
author_email = 
description = Tools for generating k-meshes and plotting spin textures (2D & 3D)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/souchakx/spintexture
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    matplotlib

[options.entry_points]
console_scripts =
    spintexture = spintexture.cli:main
